--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 </head>
 <body class="font-para">
     <header>
-        <nav>
-            <div class="navbar bg-orange-50">
+        <nav class="px-12 bg-orange-50">
+            <div class="navbar">
                 <div class="navbar-start">
                   <img class="pr-1" src="c1-assets/logo-header.png" alt="">
                   <h3 class="text-xl font-medium hidden lg:flex">Browse<span class="text-yellow">4</span>Pets</h3>
@@ -90,12 +90,21 @@
               </div>
             </nav>
         <!-- banner section  -->
-         <!-- <section>
-            <h3 class="font-bold font-primary text-6xl">Pamper Your Pet, <br>
+         <section class="mx-auto w-full lg:w-[1320px] px-10 gap-0 text-center mb-12">
+            <div class="grid grid-cols-1 ">
+            <div class="text-left lg:relative lg:z-10">
+            <h3 class="font-bold font-primary text-5xl mb-3">Pamper Your Pet, <br>
             Because They Deserve <br>
             the Bes</h3>
-         </section> -->
-    </header>
+            <p class="text-gray-600 mb-5">Discover a world of treats, toys, and essentials handpicked for<br> your furry friends. Shop now and make tails wag with joy!</p>
+            <button class="rounded-lg px-10 py-2 bg-yellow text-black font-semibold border-none mb-5">Find a pet</button>
+            </div>
+            
+            <img class="lg:absolute flex justify-center" src="c1-assets/cat-big.png" alt="">
+        
+        </div>
+      </section>
+      </header>
     <main>
         <!-- Browse categories section  -->
          <section>
