--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
           <section class="mb-12">
 
             <h2 class="font-bold font-primary text-4xl mb-12">Everyday Low Price</h2>
-            <div class="lg: flex gap-4">
+            <div class="lg:flex gap-4 space-y-5 mx-auto">
             <!-- image card-1 -->
             <div class="flex px-5 py-5 rounded-lg bg-gradient-to-r from-pink-100 via-purple-200 to-indigo-200 ...">
               <!-- content  -->
@@ -279,27 +279,32 @@
                 <h2 class=" font-primary text-6xl text-yellow">$7.99</h2>
                </div>
                <!-- image  -->
-                <div class="relative overflow-visible lg:w-[312px] lg:h-[392px]">
-                  <img class="absolute top-20 left-0  w-full" src="c1-assets/cute-pet-mid.png" alt="">
+                <div class="lg:relative overflow-visible lg:w-[312px] lg:h-[392px]">
+                  <img class="lg:absolute top-20 left-0  w-full" src="c1-assets/cute-pet-mid.png" alt="">
                 </div>
             </div>
           </div>
            </section>
            <!-- Get Pawsome news  -->
-            <div>
+           <section class="mb-12">
+            <h2 class="font-bold font-primary text-4xl mb-12">Everyday Low Price</h2>
+            <div class="bg-orange-100 lg:max-w-[1320px] p-10 lg:flex rounded-xl place-items-center">
               <!-- image -->
-               <div>
-                <img src="c1-assets/cute-pet-mid.png" alt="">
+               <div class="lg:w-2/5 pl-10">
+                <img class="w-full" src="c1-assets/cute-pet-mid.png" alt="">
                </div>
                <!-- content  -->
-                <div>
-                  <h3></h3>
-                  <p></p>
-                  <input type="text">
-                  <button>Subscribe</button>
+                <div class="flex flex-col place-content-center space-y-5 w-2/5  ">
+                  <h3 class="text-4xl font-bold font-primary">Get Pawsome News</h3>
+                  <p>Exclusive training tips, ticks, product deals and more.</p>
+                  <input type="text" placeholder="Enter your email..." class="bg-white text-gray-800 py-5 px-2  rounded-md">
+                  
+                  <div>
+                  <button class="px-7 py-3 bg-yellow text-xl font-medium rounded-lg">Subscribe</button>
+                </div>
                 </div>
             </div>
-            <section></section>
+            </section>
 
     </main>
     <footer>
