added browse categories section.work in process

--- a/index.html
+++ b/index.html
@@ -205,16 +205,15 @@
                 </div>
             </div>
             <!-- grid card section  -->
-             <div class="">
+             <div class="min-h-screen w-full">
                 <!-- card-1  -->
-                 <div class="bg-white rounded-lg grid grid-cols-2 lg:w-[276px] lg:h-[118px] ">
+                 <div class="bg-white bg-cover rounded-lg place-items-center flex justify-center p-2">
                     <!-- image avatar  -->
-                  <div class="avatar ">
-                        <div class="w-16 rounded-xl bg-orange-100 p-2">
-                          <img class="" src="c1-assets/dog-cartoon.png" alt="">
+                      <div class="avatar w-16 h-16 rounded-xl  ">
+                        <img class="w-full rounded-xl bg-orange-100 object cover p-2" src="c1-assets/dog-cartoon.png" alt="">
                       </div>
                      <!--card-1 text -->
-                      <div class="ml-3">
+                      <div class="ml-3 text center">
                       <!-- icon div  -->
                       <div class="flex">
                         <!-- icon  -->
@@ -236,8 +235,8 @@
                         </div>
                        </div>
                         <!-- text div  -->
-                    <div class="">
-                      <h3>Pet Bed</h3>
+                    <div class="space-y-2">
+                      <h3 class="text-xl font-semibold">Pet Bed</h3>
                       <p>$39.99</p>
                     </div>
                     
