--- a/index.html
+++ b/index.html
@@ -556,9 +556,9 @@
           <section class="mb-10">
 
             <h2 class="font-bold font-primary text-4xl mb-12">Everyday Low Price</h2>
-            <div class="flex w-full gap-4 space-y-5 mx-auto">
+            <div class="lg:flex  w-full gap-4 mx-auto">
             <!-- image card-1 -->
-            <div class="flex px-5 lg:w-[60%] rounded-lg bg-gradient-to-r from-pink-100 via-purple-200 to-indigo-200 ...">
+            <div class="flex px-5 m-4 lg:w-[60%] rounded-lg bg-gradient-to-r from-pink-100 via-purple-200 to-indigo-200 ...">
               <!-- content  -->
               <div class="items-center place-content-center space-y-3 pl-10">
                 <p class="hidden lg:block">Under Price</p>              
@@ -568,22 +568,22 @@
                </div>
                <!-- image  -->
                 <div class="lg:relative overflow-visible lg:w-[312px] lg:h-[392px]">
-                  <img class="lg:absolute top-1/3 left-0 right-20 z-10  w-full" src="c1-assets/cute-dog-mid.png" alt="">
+                  <img class="lg:absolute top-1/5 left-0 right-20 z-10  w-full" src="c1-assets/cute-dog-mid.png" alt="">
                 </div>
             </div>
 
             <!-- image card-2 -->
-            <div class="flex flex-1 px-5  rounded-lg bg-gradient-to-r from-pink-50 via-yellow-100 to-orange-200 ...">
+            <div class="flex flex-1 lg:min-h-full px-5 m-4 rounded-lg bg-gradient-to-r from-pink-50 via-yellow-100 to-orange-200 ...">
               <!-- content  -->
-              <div class=" justify-start space-y-3 ml-10">
+              <div class=" justify-start space-y-3  mt-10 ml-10">
                               
                 <h3 class="text-3xl font-primary font-bold">T-Shirt for Dogs</h3>
                 
                 <h2 class=" font-primary text-6xl text-yellow">$7.99</h2>
                </div>
                <!-- image  -->
-                <div class="lg:relative overflow-visible lg:w-[312px] lg:h-[392px]">
-                  <img class="lg:absolute top-30 left-0 right-20 z-10  w-full" src="c1-assets/cute-pet-mid.png" alt="">
+                <div class="lg:relative overflow-visible lg:w-[312px] lg:h-[400px]">
+                  <img class="lg:absolute top-20 left-0 right-20 z-10  w-full" src="c1-assets/cute-pet-mid.png" alt="">
                 </div>
             </div>
           </div>
