--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
       </section>
       </header>
-    <main class="max-w-screen-xl mx-auto">
+    <main class="mx-auto">
         <!-- Browse categories section  -->
          <section class="mb-12 lg:mx-auto mx-4 lg:max-w-screen-lg w-full text-left">
             <h2 class="text-4xl font-bold font-primary ">Browse By Categories</h2>
@@ -560,7 +560,7 @@
             <!-- image card-1 -->
             <div class="flex px-5 m-4 lg:w-[60%] rounded-lg bg-gradient-to-r from-pink-100 via-purple-200 to-indigo-200 ...">
               <!-- content  -->
-              <div class="items-center place-content-center space-y-3 pl-10">
+              <div class="lg:items-center sm:justify-start lg:place-content-center space-y-3 pl-10">
                 <p class="hidden lg:block">Under Price</p>              
                 <h3 class="text-3xl font-primary font-bold">Pet Grooming Mitt</h3>
                 <span class="text-white text-2xl font-primary hidden lg:block">(Easy Hair Removal)</span>
