added footer section

--- a/index.html
+++ b/index.html
@@ -594,10 +594,10 @@
     </main>
     <!-- footer section  -->
       
-    <div class="relative mx-auto items-center">
+    <div class=" mx-auto items-center">
     <footer class="relative mx-auto w-full lg:pt-80">
       <!-- Get Pawsome news  -->
-      <section class="lg:my-0 sm:relative lg:absolute w-[80%]  lg:-top-16 sm:top-0 lg:left-1/2 lg:transform lg:-translate-x-1/2 sm:translate-y-1/3 sm:translate-x-20">
+      <section class="lg:my-0 sm:relative lg:absolute w-[80%]  lg:-top-16 sm:top-0 lg:left-1/2 lg:transform lg:-translate-x-1/2 lg:translate-y-20 sm:translate-y-1/3 sm:translate-x-20">
         
         <div class="bg-orange-100 lg:flex w-[100%] rounded-lg place-items-center pb-5">
           <!-- image -->
