--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <!-- Browse categories section  -->
          <section class="my-20 lg:mx-auto mx-4 lg:w-[1200px] lg:h-[300px] text-left">
             <h2 class="text-4xl font-bold font-primary ">Browse By Categories</h2>
-            <div class="my-10 mx-auto w-full grid grid-cols-2 lg:grid-cols-6 md:grid-cols-3 items-center  gap-3">
+            <div class="my-10 mx-auto lg:w-[1320px] grid grid-cols-2 lg:grid-cols-6 md:grid-cols-3 items-center  gap-3">
                 <!-- card-1   -->
                 <div class=" bg-bgYellow py-10 rounded-xl text-center space-y-2 overflow-hidden place-items-center grid grid-cols-1">
                         <div class="avatar ">
@@ -203,12 +203,12 @@
 
          <!-- Trending Pet Products  -->
 
-      <section class="lg:bg-orange-100 bg-cover lg:max-w-screen-2xl mb-24 lg:py-20  items-center lg:space-y-12 lg:mx-auto">
-          <h2 class="text-4xl font-bold font-primary pl-5">Trending Pet Products</h2>
-          <div class=" w-full flex lg:flex-row flex-col pl-10 pr-20 py-10 gap-3">
+      <section class="lg:bg-orange-100 mb-24 lg:py-20 items-center lg:space-y-12 mx-auto">
+          <h2 class="text-4xl font-bold font-primary pl-20">Trending Pet Products</h2>
+          <div class="lg:w-[1320px] flex lg:flex-row flex-col pl-10 pr-20 py-10 gap-3">
              
               <!-- T-shirt image section  -->
-            <div class="relative lg:w-1/3 w-full  h-[400px] pl-10 pt-10 rounded-lg bg-bgYellow flex flex-col gap-3">
+            <div class="relative lg:w-1/3 w-full h-[400px] pl-10 pt-10 rounded-lg bg-bgYellow flex flex-col gap-3">
                 <h3 class="font-bold font-primary text-2xl">T-Shirts For Dogs</h3>
                 <p>Discover a worlds for treats,<br>toys , essentials.</p>
                 <div>
